--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Django>=1.7.0,<1.8.0
+Django>=2.0.0,<3.0.0
 pytz>=2014.4
 getconf>=1.1.0,<2.0.0
 
-django-authgroupex>=0.4.0,<1.0.0
-django-bootstrap3>=4.11.0,<5.0.0
+mozilla-django-oidc>=1.2.0,<2.0.0
+django-bootstrap3>=8.0.0,<9.0.0
 django-braces>=1.4.0,<2.0.0
 
 # For debug & co
-django-debug-toolbar>=1.2.1,<2.0.0
+django-debug-toolbar>=2.2.0,<3.0.0
 
-factory_boy>=2.3.1,<3.0.0
+factory_boy>=2.12.0,<3.0.0
